--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/chat.css" />
+    <link rel="stylesheet" href="./chat.css" />
     <title>Chat App</title>
   </head>
   <body>
@@ -93,5 +93,5 @@
     async
   ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-  <script src="../js/chat.js" async></script>
+  <script src="./chat.js" async></script>
 </html>
